# sensorhub

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-api.yml  task-definition.json
aws/: create-api-container.json
docs/: 01-api.md
sensorhub/: __init__.py
sensorhub/api/: Dockerfile  __init__.py  app.py  database.db  install.sh  pyproject.toml  requirements.txt  run.sh  schema.sql
sensorhub/cli/: demo_client.py  demo_client_Jess.py  demo_client_Juan.py  demo_client_waleed.py  locNetSrv.py  netSns.py  pyproject.toml  sns_A.py  sns_B.py  sns_C.py  sns_D.py  sns_Jesrhythm.py  sns_Juan.py  sns_LanNet.py  sns_Waleed.py  srv_LanNet.py  srv_LocalHost.py  tstSrv.py
sensorhub/notifications/: main.py  pyproject.toml
sensorhub/sensor_management/: __init__.py  database.db  main.py  pyproject.toml  schema.sql  sensor.py  storage_connectors.py
sensorhub/sensors/: pyproject.toml
sensorhub/service-sensor-management/: pyproject.toml
