[tool.poetry]
name = "api"
version = "0.1.0"
description = "Official API for sensorhub"
authors = []

[tool.poetry.scripts]
api-script = "sensorhub.api:__init__"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-restful = "^0.3.10"
postgres = "^4.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
